@@ -149,3 +149,146 @@ def run_unit_tests ():
     assert get_home_dir () == "foo"
     set_home_dir_for_unit_tests (None)
     assert get_home_dir () == home_dir
+
+# ------ Class DictCompare ------
+
+class DictCompare:
+    def __init__(self, a, b):
+        self.a = a
+        self.b = b
+
+    def compare(self):
+        ''' Given two dictionaries a,b analyze them for their
+        differences and similarities.
+
+        intersection - keys shared between a and b
+        only_a       - keys only present in a
+        only_b       - keys only present in b
+        equal        - keys present in both a and b whole values are equal
+        not_equal    - keys present in both a and b whole values are not equal'''
+
+        self.keys_a = self.a.keys()
+        self.keys_b = self.b.keys()
+        
+        self.intersection = []
+        self.only_a = []
+        self.only_b = []
+        self.equal = []
+        self.not_equal = []
+        self._add = {}
+        self._del = {}
+        self._mod = {}
+
+        for k in self.keys_a:
+            if self.b.has_key(k):
+                self.intersection.append(k)
+            else:
+                self.only_a.append(k)
+
+        for k in self.keys_b:
+            if not self.a.has_key(k):
+                self.only_b.append(k)
+                
+        for k in self.intersection:
+            if self.a[k] == self.b[k]:
+                self.equal.append(k)
+            else:
+                self.not_equal.append(k)
+                
+    def intersection(self):
+        'return list of keys shared between a and b'
+        return self.intersection
+
+    def only_a(self):
+        'return list of keys only present in a'
+        return self.only_a
+
+    def only_b(self):
+        'return list of keys only present in b'
+        return self.only_b
+
+    def equal(self):
+        'return list of keys present in both a and b whole values are equal'
+        return self.equal
+
+    def not_equal(self):
+        'return list of keys present in both a and b whole values are not equal'
+        return self.not_equal
+
+    def get_change_set(self, dict_lhs, dict_rhs):
+        '''Return changes necessary to make dict_lhs equivalent to dict_rhs,
+        (e.g. lhs = rhs), the two dictionary parameters are specified as
+        either the string 'a' or the string 'b' corresponding to the parameters
+        this class was created with.
+        
+        Return value is a dictionary with 3 keys (add, del, mod) whose values
+        are dictionaries containing containing (key,value) pairs to add,
+        delete, or modify respectively in dict_lhs.'''
+
+        if dict_lhs == dict_rhs or dict_lhs not in "ab" or dict_rhs not in "ab":
+            raise ValueError
+
+        if dict_lhs == 'a':
+            a = self.a
+            b = self.b
+            only_a = self.only_a
+            only_b = self.only_b
+        elif dict_lhs == 'b':
+            a = self.b
+            b = self.a
+            only_a = self.only_b
+            only_b = self.only_a
+        else:
+            raise ValueError
+
+        self._add = {}
+        for k in only_b:
+            self._add[k] = b[k]
+
+        self._del = {}
+        for k in only_a:
+            self._del[k] = a[k]
+
+        self._mod = {}
+        for k in self.not_equal:
+            self._mod[k] = b[k]
+
+        change_set = {'add':self._add, 'del':self._del, 'mod':self._mod}
+        return change_set
+
+
+    def is_equal(self):
+        if len(self.only_a) == 0 and len(self.only_b) == 0 and len(self.not_equal) == 0:
+            return True
+        else:
+            return False
+
+    def dump(self):
+        'Print the results of the dictionary comparision'
+        print "intersection = %s" % ",".join(self.intersection)
+        print "only a = %s" % ",".join(self.only_a)
+        print "only b = %s" % ",".join(self.only_b)
+        print "equal = %s" % ",".join(self.equal)
+        print "not equal = %s" % ",".join(self.not_equal)
+
+def dump_change_set(cs):
+    _add = cs['add']
+    _del = cs['del']
+    _mod = cs['mod']
+
+    if len(_add.keys()):
+        print "Key/Values to ADD"
+        for k in _add.keys():
+            print "    %s=%s" % (k, _add[k])
+
+    if len(_del.keys()):
+        print "Keys to DELETE"
+        for k in _del.keys():
+            print "    %s=%s" % (k, _del[k])
+
+    if len(_mod.keys()):
+        print "Key/Values to Modify"
+        for k in _mod.keys():
+            print "    %s=%s" % (k, _mod[k])
+
+
